fix sales page